fix(web): fix grid height on mobile

--- a/apps/web/src/pages/Games/Game/Game.module.scss
+++ b/apps/web/src/pages/Games/Game/Game.module.scss
@@ -16,6 +16,8 @@
     max-height: $main-height;
 
     @include mobile {
+      width: 100vw;
+      height: 100vw;
       max-width: unset;
       max-height: unset;
     }
